Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -307,16 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter'"
+       "'bar'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,9 +327,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [],
+         "type": "bar",
+         "uid": "497a1ac2-5fc4-11e9-98f6-69fea02fa955"
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"53a52058-95d2-44ef-9a22-088198bf85f7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"53a52058-95d2-44ef-9a22-088198bf85f7\", [{\"text\": [], \"type\": \"bar\", \"uid\": \"497ddde2-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"53a52058-95d2-44ef-9a22-088198bf85f7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"53a52058-95d2-44ef-9a22-088198bf85f7\", [{\"text\": [], \"type\": \"bar\", \"uid\": \"497ddde2-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops])"
    ]
