Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -297,26 +297,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "text_values = []\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter'"
+       "'bar'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -336,17 +336,17 @@
        "data": [
         {
          "text": [],
-         "type": "scatter",
-         "uid": "6d1fc076-5fc4-11e9-98f6-69fea02fa955"
+         "type": "bar",
+         "uid": "497a1ac2-5fc4-11e9-98f6-69fea02fa955"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"5c5133c0-9648-4da4-aa1e-a326fb6d12d7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5c5133c0-9648-4da4-aa1e-a326fb6d12d7\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"6d2a09c8-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"53a52058-95d2-44ef-9a22-088198bf85f7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"53a52058-95d2-44ef-9a22-088198bf85f7\", [{\"text\": [], \"type\": \"bar\", \"uid\": \"497ddde2-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"5c5133c0-9648-4da4-aa1e-a326fb6d12d7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5c5133c0-9648-4da4-aa1e-a326fb6d12d7\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"6d2a09c8-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"53a52058-95d2-44ef-9a22-088198bf85f7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"53a52058-95d2-44ef-9a22-088198bf85f7\", [{\"text\": [], \"type\": \"bar\", \"uid\": \"497ddde2-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
