Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,9 +383,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "text": [],
+         "type": "scatter",
+         "uid": "9476186e-5fc4-11e9-98f6-69fea02fa955",
+         "x": [],
+         "y": []
+        },
+        {
+         "text": [],
+         "type": "scatter",
+         "uid": "94761a12-5fc4-11e9-98f6-69fea02fa955",
+         "x": [],
+         "y": []
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"b147baec-a897-4617-9e5e-0495df86d695\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b147baec-a897-4617-9e5e-0495df86d695\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"947ff960-5fc4-11e9-98f6-69fea02fa955\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"947ffabe-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"b147baec-a897-4617-9e5e-0495df86d695\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"b147baec-a897-4617-9e5e-0495df86d695\", [{\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"947ff960-5fc4-11e9-98f6-69fea02fa955\"}, {\"text\": [], \"x\": [], \"y\": [], \"type\": \"scatter\", \"uid\": \"947ffabe-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "plotly.offline.iplot([bar_trace_first_three_pops, bar_trace_first_three_areas])"
    ]
