Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,16 +307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter'"
+       "'bar'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -336,17 +336,17 @@
        "data": [
         {
          "text": [],
-         "type": "scatter",
-         "uid": "6d1fc076-5fc4-11e9-98f6-69fea02fa955"
+         "type": "bar",
+         "uid": "3b9fa5c8-5fc6-11e9-98f6-69fea02fa955"
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"5c5133c0-9648-4da4-aa1e-a326fb6d12d7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5c5133c0-9648-4da4-aa1e-a326fb6d12d7\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"6d2a09c8-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0ade06da-bee6-442f-a40e-303ce99af61c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0ade06da-bee6-442f-a40e-303ce99af61c\", [{\"text\": [], \"type\": \"bar\", \"uid\": \"3ba34520-5fc6-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"5c5133c0-9648-4da4-aa1e-a326fb6d12d7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5c5133c0-9648-4da4-aa1e-a326fb6d12d7\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"6d2a09c8-5fc4-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"0ade06da-bee6-442f-a40e-303ce99af61c\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0ade06da-bee6-442f-a40e-303ce99af61c\", [{\"text\": [], \"type\": \"bar\", \"uid\": \"3ba34520-5fc6-11e9-98f6-69fea02fa955\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
