--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,7 @@
    "outputs": [],
    "source": [
     "text_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'text': text_values}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x''text': text_values}"
    ]
   },
   {
