--- a/index.ipynb
+++ b/index.ipynb
@@ -391,6 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "area_text = \n",
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
