--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': [cities[0]['Area', 'y': [], 'text': []}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
    ]
   },
