Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -392,7 +392,7 @@
    "outputs": [],
    "source": [
     "bar_trace_first_three_areas = {'type': 'bar', 'x': [], 'y': [], 'text': []}\n",
-    "bar_trace_first_three_pops = {'type': 'bar', 'x': [], 'y': [], 'text': []}"
+    "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': }"
    ]
   },
   {
