--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_areas = {'type': 'bar', 'x': [x_values], 'y': [], 'text': text_values}\n",
+    "bar_trace_first_three_areas = {'type': 'bar', 'x': x_values, 'y': [cities[0]['']], 'text': text_values}\n",
     "bar_trace_first_three_pops = {'type': 'bar', 'x': x_values, 'y': y_values, 'text': text_values}"
    ]
   },
